03.business-os/AICompanyManager/900.meta/r8z_v10l_c2e_debug_display_cleanup_formal_ui_20260504_214442/020_core_node_check.txt
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:6370
  }mR8zMgrMajorCardRerender(sourceLabel) {
                                         ^

SyntaxError: Unexpected token '{'
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
